--- a/log4j.properties
+++ b/log4j.properties
@@ -2,4 +2,7 @@
 log4j.rootLogger=TRACE,CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout  
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+
+log4j.logger.com.Example=DEBUG
+//log4j.logger.com.Example=MyLevel.level
